@@ -32,6 +32,10 @@ Changes in features visible to the user
       messages were not delivered when changing from negative to
       non-negative priority.
     * jabberd14 now handles XML namespaces
+    * jabberd14 now handles xml:lang attributes defined on the stream root
+      element, declaring the default language of the stream. If a stanza does
+      not redeclare the language, this language is passed along with the
+      stanza.
 
 
 Version 1.4.4 - 2005-04-16
